--- a/css/media.css
+++ b/css/media.css
@@ -11,7 +11,7 @@
     background-color: #F2F2F2;
   }
 
-  .header__wrapper--logo .header__login {
+  .header__wrapper--logo .header__loginbtn {
     display: none;
   }
 
@@ -25,7 +25,7 @@
     padding-top: 21px;
   }
 
-  .header__logo {
+  .header__logo--desktop {
     display: none;
   }
 
@@ -93,7 +93,7 @@
     justify-content: flex-start;
   }
 
-  .navigation__top {
+  .broadcast__top {
     margin-bottom: 222px;
   }
 
@@ -127,24 +127,24 @@
     padding-bottom: 97px;
   }
   
-  .guests__wrapper--left {
+  .guests__left {
     width: 68%;
   }
 
-  .btn__list {
+  .accordion__list {
     padding: 27px 0;
     height: 203px;
   }
 
-  .btn__item {
+  .accordion__item {
     margin-right: 30px;
   }
 
-  .btn__item:nth-child(4n) {
+  .accordion__item:nth-child(4n) {
     margin-bottom: 13px;
   }
 
-  .btn__item:nth-child(5n) {
+  .accordion__item:nth-child(5n) {
     margin-bottom: 0;
   }
 
@@ -179,7 +179,7 @@
     display: none;
   }
 
-  .playlists__note--media {
+  .playlists__note-media {
     display: block;
   }
   
@@ -289,7 +289,7 @@
     display: block;
   }
 
-  .header__loginbar {
+  .header__login {
     right: calc(50% - 270px);
     padding: 60px 40px;
     width: 539px;
@@ -361,11 +361,11 @@
     margin-right: 0;
   }
 
-  .bottom__radio--wrapper {
+  .bottom__radio-wrapper {
     display: none;
   }
 
-  .bottom__play--wrapper {
+  .bottom__play-wrapper {
     display: block;
     text-align: center;
   }
@@ -400,27 +400,27 @@
     padding-bottom: 58px;
   }
 
-  .navigation__top {
+  .broadcast__top {
     margin-bottom: 33px;
   }
 
-  .navigation__bottom {
+  .broadcast__bottom {
     display: none;
   }
 
-  .navigation__bottom--mobile {
+  .broadcast__bottom--mobile {
     display: flex;
     justify-content: center;
     padding: 28px 0;
     border-top: 1px solid #E6E8EC;
   }
 
-  .navigation__right {
+  .broadcast__right {
     margin-left: 20px;
     width: 255px;
   }
 
-  .broadcast__img--wrapper {
+  .broadcast__img {
     margin-top: 5px;
     margin-bottom: 0;
   }
@@ -440,38 +440,38 @@
     width: 100%;
   }
 
-  .guests__wrapper--both {
+  .guests__both {
     flex-direction: column;
   }
 
-  .guests__wrapper--left {
+  .guests__left {
     margin-right: 0;
     margin-bottom: 53px;
     width: 100%;
   }
 
-  .btn__list {
+  .accordion__list {
     width: 100%;
     height: 260px;
   }
 
-  .btn__item {
+  .accordion__item {
     margin-bottom: 27px;
   }
 
-  .btn__item:nth-child(4n) {
+  .accordion__item:nth-child(4n) {
     margin-bottom: 27px;
   }
 
-  .btn__item:nth-child(5n) {
+  .accordion__item:nth-child(5n) {
     margin-bottom: 0;
   }
   
-  .btn__item:nth-child(n + 11) {
+  .accordion__item:nth-child(n + 11) {
     margin-right: 0;
   }
 
-  .guests__wrapper--right {
+  .guests__right {
     width: 100%;
   }
 
@@ -559,7 +559,7 @@
   }
 
 
-  .about__image--mobile {
+  .about__image-mobile {
     display: block;
     position: absolute;
     top: 474px;
@@ -634,7 +634,7 @@
     display: none;
   }
 
-  .social__icon--mobile {
+  .social__icon-mobile {
     display: block;
   }
 
@@ -690,12 +690,12 @@
     min-height: 120px;
   }
 
-  .btn__list {
+  .accordion__list {
     padding: 18px 0;
     min-height: 400px;
   }
 
-  .btn__item:nth-child(5n) {
+  .accordion__item:nth-child(5n) {
     margin-bottom: 27px;
   }
 
@@ -703,7 +703,7 @@
     min-height: 180px;
   }
 
-  .about__image--mobile {
+  .about__image-mobile {
     display: none;
   }
 
@@ -746,11 +746,11 @@
     justify-content: space-between;
   }
 
-  .header__wrapper--logo .header__login {
+  .header__wrapper--logo .header__loginbtn {
     display: block;
   }
 
-  .header__login {
+  .header__loginbtn {
     padding: 8px 23px;
   }
 
@@ -781,7 +781,7 @@
     display: none;
   }
 
-  .header__btns .header__login {
+  .header__btns .header__loginbtn {
     display: none;
   }
 
@@ -795,17 +795,17 @@
     margin-right: 0;
   }
 
-  .header__loginbar {
+  .header__login {
     right: calc(50% - 128px);
     padding: 40px 20px;
     width: 256px;
   }
 
-  .login__close--big {
+  .login__img--big {
     display: none;
   }
 
-  .login__close--small {
+  .login__img--small {
     display: block;
   }
 
@@ -879,7 +879,7 @@
     transform: none;
   }
 
-  .bottom__radio--wrapper {
+  .bottom__radio-wrapper {
     display: flex;
     position: absolute;
     z-index: 2;
@@ -908,7 +908,7 @@
     margin-bottom: 5px;
   }
 
-  .bottom__play--wrapper {
+  .bottom__play-wrapper {
     display: none;
   }
 
@@ -988,11 +988,11 @@
     margin-right: 16px;
   }
 
-  .card__play--play {
+  .card__playimg--play {
     display: none;
   }
 
-  .card__playmobile--play {
+  .card__playimg-mobile--play {
     display: block;
   }
 
@@ -1055,7 +1055,7 @@
     line-height: 12px;
   }
 
-  .navigation__top {
+  .broadcast__top {
     margin-bottom: 12px;
   }
 
@@ -1118,18 +1118,18 @@
     fill: var(--color);
   }
 
-  .navigation__bottom--mobile {
+  .broadcast__bottom--mobile {
     padding: 30px 32px;
     padding-bottom: 21px;
     max-width: 320px;
   }
 
-  .broadcast__img--wrapper {
+  .broadcast__img {
     flex-shrink: 0;
     width: 77px;
   }
 
-  .navigation__right {
+  .broadcast__right {
     display: flex;
     flex-direction: column-reverse;
     align-items: flex-start;
@@ -1172,7 +1172,7 @@
     line-height: 160%;
   }
 
-  .guests__wrapper--left {
+  .guests__left {
     margin-bottom: 23px;
   }
 
@@ -1182,20 +1182,20 @@
     line-height: 16px;
   }
 
-  .btn__item {
+  .accordion__item {
     margin-right: 44px;
     max-width: 100px;
   }
 
-  .btn__item:nth-child(5n) {
+  .accordion__item:nth-child(5n) {
     margin-bottom: 27px;
   }
 
-  .btn__item:nth-child(8n) {
+  .accordion__item:nth-child(8n) {
     margin-bottom: 0;
   }
 
-  .btn__bio {
+  .accordion__bio {
     font-size: 14px;
     line-height: 110%;
     text-align: left;
@@ -1241,7 +1241,7 @@
     display: none;
   }
 
-  .content__icon--320 {
+  .content__icon-320 {
     display: block;
   }
 
@@ -1362,7 +1362,7 @@
     left: calc(100% - 24px);
   }
 
-  .playlists__note--media {
+  .playlists__note-media {
     padding-top: 28px;
   }
 
@@ -1428,7 +1428,7 @@
     padding-bottom: 54px;
   }
 
-  .about__image--mobile {
+  .about__image-mobile {
     display: none;
   }
 
